Flex causes weird overflow issues

--- a/src/features/pdf/PDFView.module.css
+++ b/src/features/pdf/PDFView.module.css
@@ -7,7 +7,7 @@
   & [role='button'] {
     display: none !important;
   }
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .pdf-wrapper h1 {
   margin-top: 0;
